--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,6 @@
   "require": {
   },
   "require-dev": {
-    "symplify/easy-coding-standard": "11.2.2"
+    "symplify/easy-coding-standard": "^11.2.4"
   }
 }
